# QSIT-RAG

./: config.json  main.py  pyproject.toml
data/base_model/: chunk.py  collection.py  docx_document.py  image_document.py  search_result.py  text_document.py
data/base_models/: base_models.py
data/config/: chunking_strategy.py  collection_config.py  data_sources_config.py  database_config.py  embedding_config.py  preprocessing_config.py  query_config.py  rag_config.py
data_classes/base_models/: source_types.py
data_classes/config/: caching.py  collection.py  data_sources.py  database.py  embedding.py  indexing.py  monitoring.py  query.py  rag.py
embedding/: base.py  embedding_factory.py  openai_embedding.py
embedding/dense/: dense_base.py  openai_embedding.py
embedding/reranking/: reranking_base.py
embedding/sparse/: sparse_base.py
ingestion/: collection_loader.py
ingestion/preprocessors/chunking/: chunking_processor.py
ingestion/readers/: base_reader.py  docx_reader.py  file_reader.py  image_reader.py  text_reader.py
ingestion/sources/: base_source.py  file_source.py  folder_source.py
rag_ingest/rag_loader/: config_loader.py  data_chunker.py
utils/configuration_reader/: base_source_reader.py  collection_reader.py  document_reader.py  file_reader.py  folder_reader.py
vector_db/: base.py  qdrant_db.py  vector_factory.py
