[project]
name = "qsit-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chunkwise",
    "pillow>=12.0.0",
    "python-docx>=1.2.0",
]

[tool.uv.sources]
chunkwise = { git = "https://github.com/h9-tec/ChunkWise.git" }
