[project]
name = "qsit-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chunkwise",
    "openai>=2.14.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "qdrant-client>=1.16.2",
]

[tool.uv.sources]
chunkwise = { git = "https://github.com/mohamedaliELfeky/ChunkWise.git" }
